<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeActivity">


    <TextView
        android:id="@+id/txtview_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        app:layout_constraintBottom_toTopOf="@id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="32dp"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_height="180dp"
        android:layout_width="320dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
             >


            <TextView
                android:id="@+id/txtview_quote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:padding="8dp"
                android:text="@string/quote"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/txtview_character"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:textColor="@android:color/secondary_text_light"
                android:padding="6dp"
                android:text="@string/character"
                android:layout_marginTop="6dp"
                app:layout_constraintBottom_toTopOf="@id/txtview_game"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="end"
                />
            <TextView
                android:id="@+id/txtview_game"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:textColor="@android:color/secondary_text_light"
                android:padding="6dp"
                android:text="@string/game"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />




        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/btn_reroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_reroll"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:textSize="12sp"/>






</androidx.constraintlayout.widget.ConstraintLayout>




